fix: reduce the gap between the checkbox and the label

--- a/src/propertySelector/scss/propertySelector.scss
+++ b/src/propertySelector/scss/propertySelector.scss
@@ -37,7 +37,7 @@
             }
 
             .property-description-checkbox {
-                padding-right: 8px;
+                padding-right: 4px;
             }
 
             .property-description-class {
